vendor/structopt-0.3.21/tests/ui/skip_flatten.stderr
error: subcommand, flatten and skip cannot be used together
  --> $DIR/skip_flatten.rs:17:23
   |
17 |     #[structopt(skip, flatten)]
   |                       ^^^^^^^
